Move to is empty and remove commented code

--- a/ui/src/app/views/workspace-edit/component.html
+++ b/ui/src/app/views/workspace-edit/component.html
@@ -31,17 +31,8 @@
       </div>
       <div class="section-text">
         To fulfill program requirements, All of Us requests the following information
-        for each workspace.<!-- If you are not ready to complete this questionnaire, or if-->
-        <!--this is a temporary workspace, please check this box (any entries already made-->
-        <!--will not be saved):-->
+        for each workspace.
       </div>
-      <!--<clr-checkbox-->
-          <!--name="not-ready"-->
-          <!--id="not-ready"-->
-          <!--[(ngModel)]="workspace.researchPurpose.notReady"-->
-          <!--[clrDisabled]="mode == Mode.Edit">-->
-        <!--<h3>Not Ready</h3>-->
-      <!--</clr-checkbox>-->
     </div>
     <div>
       <div class="section research-purpose-section">
