Fix styling and text

--- a/ui/src/app/views/workspace-edit/component.html
+++ b/ui/src/app/views/workspace-edit/component.html
@@ -41,8 +41,8 @@
           <div class="required-text">(Required)</div>
         </div>
         <div class="section-text">
-          Please include the research question, the plan for use of the data to answer
-          the research question, and the expected outcome/benefit of the research; this
+          Please include the <strong>research question</strong>, the <strong>plan for use of the data</strong> to answer
+          the research question, and the <strong>expected outcome/benefit</strong> of the research; this
           information will be posted publicly on the All of Us website to inform the research
           participants.
         </div>
