--- a/ui/src/app/views/homepage/component.html
+++ b/ui/src/app/views/homepage/component.html
@@ -123,7 +123,7 @@
               <li><a href="#" class="bullets">
                 Contributing to the Workbench</a></li>
             </ul>
-            <clr-tooltip-content clrPosition="top-left" clrSize="sm" *clrIfOpen>
+            <clr-tooltip-content clrPosition="bottom-left" clrSize="sm" *clrIfOpen>
               <span>Coming Soon</span>
             </clr-tooltip-content>
           </clr-tooltip>
@@ -142,7 +142,7 @@
               <li><a href="#" class="bullets" data-toggle="tooltip" title="Coming Soon">
                 Sharing and Publishing Workspaces</a></li>
             </ul>
-            <clr-tooltip-content clrPosition="top-left" clrSize="sm" *clrIfOpen>
+            <clr-tooltip-content clrPosition="bottom-left" clrSize="sm" *clrIfOpen>
               <span>Coming Soon</span>
             </clr-tooltip-content>
           </clr-tooltip>
@@ -160,7 +160,7 @@
               <li><a href="#" class="bullets" data-toggle="tooltip" title="Coming Soon">
                 Sharing and Publishing Notebooks</a></li>
             </ul>
-            <clr-tooltip-content *clrIfOpen>
+            <clr-tooltip-content clrPosition="bottom-left" clrSize="sm" *clrIfOpen>
               <span>Coming Soon</span>
             </clr-tooltip-content>
           </clr-tooltip>
