--- a/ui/src/app/views/signed-in/component.css
+++ b/ui/src/app/views/signed-in/component.css
@@ -8,6 +8,10 @@
   cursor: pointer;
 }
 
+.header-image:focus {
+  outline: none;
+}
+
 .header-container {
   display: flex;
   justify-content: flex-start;
