RW-894 add redux actions for ingredients call

--- a/ui/src/app/cohort-search/node-info/node-info.component.html
+++ b/ui/src/app/cohort-search/node-info/node-info.component.html
@@ -13,7 +13,7 @@
   </button>
 
   <!-- CODE -->
-  <div class="code font-weight-bold">
+  <div class="code font-weight-bold" [innerHTML]="displayCode | safeHtml">
     {{ displayCode }}
   </div>
 
