--- a/ui/src/app/cohort-search/search-bar/search-bar.component.html
+++ b/ui/src/app/cohort-search/search-bar/search-bar.component.html
@@ -1,8 +1,20 @@
-<div class="search-box">
-  <clr-icon shape="search"></clr-icon>
-  <input clrInput
-   type="text"
-   name="searchTerm"
-   [(ngModel)]="searchTerm"
-   (input)="inputChange($event.target.value)"/>
+<div class="dropdown" [class.open]="options.length">
+  <div class="search-box">
+    <clr-icon shape="search"></clr-icon>
+    <input clrInput
+     type="text"
+     name="searchTerm"
+     [(ngModel)]="searchTerm"
+     (input)="inputChange($event.target.value)"/>
+    <span *ngIf="loading" class="spinner spinner-inline"></span>
+  </div>
+  <div *ngIf="options.length" class="dropdown-menu">
+    <button
+      *ngFor="let option of options"
+      class="dropdown-item"
+      type="button"
+      (click)="selectOption(option)">
+      {{option.name}}
+    </button>
+  </div>
 </div>
