--- a/ui/src/app/cohort-search/tree/tree.component.html
+++ b/ui/src/app/cohort-search/tree/tree.component.html
@@ -6,5 +6,5 @@
   <clr-icon shape="error-standard"></clr-icon>
   <em>Failed to Load Criteria</em>
 </div>
-<app-search-bar *ngIf="_type === 'visit' || 'drug'" [_type]="_type"></app-search-bar>
+<app-search-bar *ngIf="(_type === 'visit' || 'drug') && !loading" [_type]="_type"></app-search-bar>
 <crit-node *ngFor="let item of children" [node]="item"></crit-node>
