margin-right and wrapping

--- a/ui/src/app/views/homepage/component.html
+++ b/ui/src/app/views/homepage/component.html
@@ -1,5 +1,5 @@
 <div class="background-image">
-  <div class="row" style="display:flex; justify-content: center;">
+  <div class="row" style="display:flex; justify-content: center;flex-wrap: nowrap">
     <div *ngFor="let card of cardDetails">
       <div class="card double">
         <div class="row">
@@ -94,7 +94,7 @@
       <div class="row">
         <div class="footerTitle">How to Use the All of Us Researcher Workbench</div>
       </div>
-      <div class="row footerRtLink">
+      <div class="footerRtLink">
         <div class="tooltip">
           <a href="#" class="footerLink">
             See all documentation</a>
