--- a/ui/src/app/views/homepage/component.css
+++ b/ui/src/app/views/homepage/component.css
@@ -7,11 +7,12 @@
   background-size: cover;
   height: 100%;
   margin-left: -1rem;
+  margin-right: -0.6rem;
 }
 
 .card.double {
   height: 332px;
-  width: 21rem;
+  width: 22rem;
   background-color: rgba(255, 255, 255, 0.15);
   box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.12), 0 3px 2px 0 rgba(0, 0, 0, 0.12);
   border: none;
@@ -20,7 +21,7 @@
 
 .card.single {
   height: 379px;
-  max-width: 43rem;
+  max-width: 45rem;
   border-radius: 5px;
   background-color: rgba(255, 255, 255, 0.15);
   box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.12), 0 3px 2px 0 rgba(0, 0, 0, 0.12);
@@ -220,7 +221,7 @@
 .footerRtLink {
   display: flex;
   justify-content: space-evenly;
-  margin-left: 64%;
+  margin-left: 75%;
 }
 
 .footerLink {
@@ -297,6 +298,6 @@
 
 @media (min-width: 1200px) {
   .row {
-    margin-right: 0rem;
+    margin: 0rem;
   }
 }
