--- a/ui/src/app/views/homepage/component.css
+++ b/ui/src/app/views/homepage/component.css
@@ -196,6 +196,7 @@
   margin-top: 1.3rem;
   cursor: pointer;
   box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.12), 0 3px 2px 0 rgba(0, 0, 0, 0.12);
+  border-radius: 5px;
 }
 
 .card-text {
